--- a/add.html
+++ b/add.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Table</title>
+  <title>Chinese Restaurant</title>
   <!-- Latest compiled and minified CSS & JS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -14,10 +14,10 @@
 
   <div class="container">
     <div class="jumbotron">
-      <h1>Testaurante</h1>
-      <h3>Reservation!</h3>
+      <h1>Chinese Restaurant</h1>
+      <h3>Make your reservation!</h3>
       <hr>
-      <a href="/"><button class="btn btn-danger btn-lg"><span class="fa fa-eye"></span> View Table</button></a>
+      <a href="/tables"><button class="btn btn-danger btn-lg"><span class="fa fa-eye"></span> View Table</button></a>
     </div>
     <div class="row">
 
@@ -29,35 +29,31 @@
           </div>
           <div class="card-body">
             <form method="POST" role="form">
-              routeName: "1",
-              customerName: "Ahmed",
-              customerEmail: "ahmed@example.com",
-              customerID: ahmed@example.com,
-              phoneNumber: 000-000-0000
+              
               <div class="form-group">
-                <label for="name">Name</label>
+                <label for="name">Customer Name</label>
                 <input type="text" class="form-control" id="name">
               </div>
 
               <div class="form-group">
-                <label for="role">RoleEmail</label>
-                <input type="text" class="form-control" id="roleEmail">
+                <label for="phoneNumber">Phone Number</label>
+                <input type="text" class="form-control" id="phoneNumber">
               </div>
 
               <div class="form-group">
-                <label for="age">Age</label>
-                <input type="text" class="form-control" id="age">
+                <label for="email">e-Mail</label>
+                <input type="text" class="form-control" id="email">
               </div>
 
               <div class="form-group">
-                <label for="force-points">Force Points</label>
-                <input type="text" class="form-control" id="force-points">
+                <label for="uniqueID">Unique ID</label>
+                <input type="text" class="form-control" id="uniqueID">
               </div>
 
             </form>
             <br>
             <div class="text-right">
-              <button type="submit" class="btn btn-primary btn-md" id="add-btn"><span class="fa fa-fire"></span> Add to the Force</button>
+              <button type="submit" class="btn btn-primary btn-md" id="add-btn"><span class="fa fa-fire"></span> Submit</button>
             </div>
           </div>
         </div>
@@ -70,18 +66,19 @@
     // Question: What does this code do?
     $("#add-btn").on("click", function(event) {
       event.preventDefault();
-      var newCharacter = {
+      var newTable = {
         name: $("#name").val().trim(),
-        role: $("#role").val().trim(),
-        age: $("#age").val().trim(),
-        forcePoints: $("#force-points").val().trim()
+        phoneNumber: $("#phoneNumber").val().trim(),
+        email: $("#email").val().trim(),
+        uniqueID: $("#uniqueID").val().trim()
       };
+      console.log("click");
 
       // Question: What does this code do??
-      $.post("/api/characters", newCharacter)
+      $.post("/api/table", newTable)
         .then(function(data) {
           console.log("add.html", data);
-          alert("Adding character...");
+          alert("Adding table...");
         });
     });
   </script>
