--- a/view.html
+++ b/view.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>TECREstaurant</title>
+  <title>Chinese Restaurant</title>
   <!-- Latest compiled and minified CSS & JS -->
   <link rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -18,49 +18,18 @@
 
   <div class="container">
     <div class="jumbotron">
-      <h1>Hot restaurant</h1>
+      <h1>Chinese Restaurant</h1>
       <h3>Book your set before all gone</h3>
       <hr>
       <a href="/add"><button class="btn btn-danger btn-lg"><span class="fa fa-plus"></span> Make a reservation</button></a>
-      <a href="/api/table"><button class="btn btn-danger btn-lg"><span
+      <a href="/tables"><button class="btn btn-danger btn-lg"><span
             class="fa fa-eye"></span> Vew Table </button></a>
     </div>
-    <div class="row">
+   
+    <a href="/api/table">API table Link |</a> <a href="/api/table">API Wait List |</a>
 
-      <div class="col-12">
-
-        <div class="card mb-4">
-          <div class="card-header">
-            <h3><strong>Table Search</strong></h3>
-          </div>
-          <div class="card-body">
-            <input type="text" id="table-search" class="form-control">
-            <br>
-            <div class="text-right">
-              <button type="submit" class="btn btn-primary btn-md" id="search-btn"><span
-                  class="fa fa-search"></span> Search
-                Your Feelings. You know it is true.</button>
-
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-header">
-            <h3><strong>Table Statistics</strong></h3>
-          </div>
-          <div class="card-body">
-            <h2 id="name">Yoda</h2>
-            <div id="stats">
-              <h3><strong>Role:</strong> <span id="role">Jedi Master</span></h3>
-              <h3><strong>Age:</strong> <span id="age">900</span></h3>
-              <h3><strong>Force Points:</strong> <span id="force-points">2000</span></h3>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
+
 
   <script type="text/javascript">
     $("#search-btn").on("click", function() {
